feat(validation): update response status and improve validation logic in application controller